@@ -38,6 +38,7 @@ fixed bugs:
   constraint is empty or contains too many nonzero elements mksetcoefs is invalid) 
 - fixed bug in SCIPconsSetInitial() that occurred in pairwise presolving: add or delete constraint in initconss when changing
   the initial flag
+- fixed "GGT-Kaibel-Bug" in var.c, prop_pseudoobj.c and cons_varbound.c that occured while computing new values with infinity values
 
 plugins:
 - added interface to QSopt due to Daniel Espinoza
